welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: value ro is not a member of Int
	for (i<- 1 ro nums.length-1) {
                   ^